заказ из корзины оформляется до состояния "не оплачено" заказы отправляются в бд не протестировано на нескольких товарах (завтра сделаю) интерфейс ужасный, не бейте

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -45,6 +45,7 @@
 </table>
 
 <div class="text-center">
-    <a class="btn btn-primary" href="@Model.ReturnUrl">Продолжить покупки</a>
+        <a class="btn btn-primary" href="@Model.ReturnUrl">Продолжить покупки</a>
+        @Html.ActionLink("Оформить заказ", "OrderDetails", null, new { @class = "btn btn-primary" })
 </div>
 
