--- a/Views/Seller/Report.cshtml
+++ b/Views/Seller/Report.cshtml
@@ -1,12 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Report";
-    GoodReport MainReport = ViewBag.MainReport;
-    List<GoodReport> AllReport = ViewBag.AllReport;
-    Layout = "~/Views/Shared/ViewSeller.cshtml";
-
     List<string> dropList = new List<string>();
-
+    Layout = "~/Views/Shared/ViewSeller.cshtml";
 
     for (DateTime start = ViewBag.Seller.Time; start < DateTime.Now; start = start.AddMonths(1))
     {
@@ -18,48 +13,40 @@
     dropList.Reverse();
 }
 
-<form action="/seller/controlreport" method="post">
-    @Html.DropDownList("radius", new SelectList(dropList))
-    @Html.CheckBox("showAll", true)
-    <label for="contactChoice3">За все время</label>
-    <button type="submit">Сфорипировать отчёт</button>
-</form>
-
-
-<table>
-    <tr>
-        <td>Заказов вскего</td>
-        <td>@MainReport.orders </td>
-    </tr>
-
-    <tr>
-        <td>Товаров продано</td>
-        <td>@MainReport.sell</td>
-    </tr>
-
-    <tr>
-        <td>Стоймость проданного товара</td>
-        <td>@MainReport.money </td>
-    </tr>
-
-</table>
-
-<table>
-    <tr>
-        <td> товар </td>
-        <td> заказов</td>
-        <td> продано </td>
-        <td> стоймость </td>
-    </tr>
-    @foreach (GoodReport report in AllReport)
-    {
-
-        <tr>
-            <td> @report.good.title </td>
-            <td> @report.orders </td>
-            <td> @report.sell </td>
-            <td> @report.money </td>
-        </tr>
+<script type="text/javascript">
+    function OnBegin() {
+        $("#result").html("");
     }
-</table>
+
+</script>
+
+
+
+
+@using (Ajax.BeginForm("ReportTable", new AjaxOptions { UpdateTargetId = "result", LoadingElementId = "loadimg", LoadingElementDuration = 1, OnBegin = "OnBegin" } ))
+{
+    @Html.DropDownList("radius", new SelectList(dropList))
+    @Html.CheckBox("showAll", false)
+    <label for="contactChoice3" >За все время</label>
+    <input type="submit"/>
+}
+
+
+<div id="loadimg" style="display:none;">
+    <div class = "waiting">
+        <img src="https://i.gifer.com/y4.gif">
+        <h2>Данные загружаются</h2>
+    </div>
+</div>
+
+
+<div id="result">
+</div>
+
+
+@Scripts.Render("~/Scripts/jquery-3.4.1.min.js")
+@Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+
+
+
 
