--- a/Views/Seller/MyGoods.cshtml
+++ b/Views/Seller/MyGoods.cshtml
@@ -5,7 +5,8 @@
     string[] Statuses = new string[3] {"Не опубликовано","Опубликовано","Удалено"};
 }
 
-    <a href="@Url.Content("~/seller/addgood")">добавить товар</a>    
+    <a href="@Url.Content("~/seller/addgood")">добавить товар</a>
+    <a href="@Url.Content("~/seller/globaldwownload")">экспорт списка товаров из Exel</a>
 
     <div class="table">
         <div class="row-table row-first">
@@ -43,7 +44,7 @@
                 </div>
 
                 <div class="">
-                    @good.Price
+                    @good.PriceInRubles
                 </div>
 
                 <div class="">
