hot fix catalog and styles

--- a/Views/Partial/OrderInfo.cshtml
+++ b/Views/Partial/OrderInfo.cshtml
@@ -1,19 +1,26 @@
-﻿@model Order
+﻿@model List<Order>
 @{
     Layout = null;
 }
-<div class="title">Товар: @Model.good.title</div>
-<div class="count">Количество заказано: @Model.count</div>
-<div class="time">Время заказа: @Model.Time.ToString()</div>
-<div class="status">
-    Статус:
-    @switch (Model.status)
-    {
-        case (int)StatusOrder.Weit:
-            <span>Товар ожидает отправки</span>break;
-        case (int)StatusOrder.Sent:
-            <span>Товар ожидает доставки</span>break;
-        case (int)StatusOrder.Complit:
-            <span>Товар доставлен</span>break;
-    }
-</div>
+@foreach (Order order in Model)
+{
+    <div class="order">
+        <div class="title">Товар: @order.good.title</div>
+        <div class="count">Количество заказано: @order.count</div>
+        <div class="time">Время заказа: @order.Time.ToString()</div>
+        <div class="status">
+            Статус:
+            @switch (order.status)
+            {
+                case (int)StatusOrder.Weit:
+                    <span>Товар ожидает отправки</span>break;
+                case (int)StatusOrder.Sent:
+                    <span>Товар ожидает доставки</span>break;
+                case (int)StatusOrder.Complit:
+                    <span>Товар доставлен</span>break;
+                default:
+                    <span>Хз</span>break;
+            }
+        </div>
+    </div>
+}
