--- a/Content/Auth.css
+++ b/Content/Auth.css
@@ -1,13 +1,4 @@
-﻿.pazmiv {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.5;
-    background-color: #000000;
-}
-.authWindow {
+﻿.authWindow {
     position:relative;
     width: 500px;
     height: 400px;
@@ -25,29 +16,28 @@
     background-color:#e4cb5d;
 }
 .title {
-    display: inline-block;
-    padding: 15px;
     font-size: 36px;
-    padding-left:30%;
+    text-align:center;
 }
 .close {
+    position:absolute;
     font-size: 35px;
-    float:right;
-    margin-right:5px;
-}
-.password{
-    margin-top:15px;
+    top:0;
+    right:5px;
 }
 .desc-auth{
     padding:10px;
     padding-left:5%;
-    font-size:25px;
+    font-size:1.3em;
 }
-.textbox{
+.field-validation-error {
+    color: #f00;
+    font-style:oblique;
+}
+.text-box{
     position:relative;
     width:90%;
     height:40px;
-    left:5%;
 }
 .submitDiv{
     margin-top:35px;
