кнопка входа в лк продавца на главной странице

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,9 +41,13 @@
             </div>
             <div class="title">Отследить заказ по трек-номеру</div>
         </a>
+        <a class="block-link" href="@Url.Action("Index", "Seller")">
+            <div class="avatar">
+                <img src="~/UploadFiles/Home/seller.png" />
+            </div>
+            <div class="title">Личный кабинет продавца</div>
+        </a>
         <div class="block-link">
-
-        </div>  <div class="block-link">
 
         </div>
     </div>
