--- a/Views/Auth/Enter.cshtml
+++ b/Views/Auth/Enter.cshtml
@@ -18,7 +18,7 @@
 
             <div class="authHeader">
                 <div class="title">
-                    <label>Непраильно введениа почта или пароль</label>
+                    <label>Непраильно введена почта или пароль</label>
                 </div>
                 <div class="close">x</div>
             </div>
